--- a/Test_home.html
+++ b/Test_home.html
@@ -5,9 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Estudio de Subsuelo</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="estilos.css">
 </head>
-<body>
+<body class="body">
   <!-- Header -->
   <header class="header">
     <nav class="nav">
